# rs-count-keywords

./: Cargo.toml  README.md  rs-count-keywords  rs-count-keywords.wasm  run.sh
src/: lib.rs  main.rs  stat.rs
src/keywords2stat/aho/: corasick.rs
src/keywords2stat/aho/corasick/: words2stat.rs
src/stat/: patcnt.rs  writer.rs
